tests/snapshots/fix__keeps_aligned_ports_at_least_10px_from_other_ports_on_the_side.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 2,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": 3.15,
  "remainingIssues": 0
}
