tests/snapshots/fix__keeps_connectors_off_crowded_sides_so_every_label_finds_a_slot.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 12,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": 22.42,
  "remainingIssues": 0
}
