tests/snapshots/fix__moves_a_label_away_from_a_connector_it_does_not_belong_to-2.snap
---
source: tests/fix.rs
expression: result.svg.as_str()
---

      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 440 440">
        <g data-node="order"><rect x="160" y="20" width="160" height="48"/><text x="240" y="49" text-anchor="middle" font-size="14">Order</text></g>
        <g data-node="postgres"><rect x="100" y="360" width="120" height="48"/><text x="160" y="389" text-anchor="middle" font-size="14">PostgreSQL</text></g>
        <g data-node="kafka"><rect x="240" y="360" width="100" height="48"/><text x="290" y="389" text-anchor="middle" font-size="14">Kafka</text></g>
        <line id="sql" data-from="order" data-to="postgres" x1="200" y1="68" x2="200" y2="360"/>
        <line id="events" data-from="order" data-to="kafka" x1="244" y1="68" x2="244" y2="360"/>
        <text data-label="sql-label" data-label-for="sql" x="191" y="219" font-size="12" text-anchor="end">SQL</text>
      </svg>
