tests/snapshots/fix__moves_a_label_away_from_a_connector_it_does_not_belong_to.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 0,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": 0.52,
  "remainingIssues": 0
}
